# Loan-app

./: ProjectSolutionDetails.md  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-aks.yml
api/: Dockerfile  main.py
artifacts/: metrics.json
data/: loan_data.csv
diagrams/: application-architecture.drawio  infrastructure-architecture.drawio
infra/iac/: acr.tf  aks.tf  main.tf  monitoring.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
infra/k8s/: api-deployment.yaml  api-service.yaml  namespace.yaml  secrets.example.yaml  ui-deployment.yaml  ui-service.yaml
models/: best_model.joblib
notebooks/: eda_loanprocessing.ipynb
src/loan_app/: config.py  data.py  evaluation.py  inference.py  modeling.py  schemas.py  train.py
ui/: Dockerfile  app.py
