[project]
name = "loan-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.2",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "mlflow>=3.10.1",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "streamlit>=1.55.0",
    "uvicorn[standard]>=0.42.0",
    "xgboost>=3.2.0",
]
